--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,17 +24,20 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'com.android.support:appcompat-v7:26.0.0'
     compile 'com.android.support:recyclerview-v7:26.0.0'
+    compile 'com.android.support:support-v13:26.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.google.android.gms:play-services-ads:11.0.4'
+    compile 'com.github.traex.rippleeffect:library:1.2.2'
+    compile 'com.makeramen:roundedimageview:1.4.0'
+    compile 'com.squareup.picasso:picasso:2.4.0'
+    compile 'com.jpardogo.materialtabstrip:library:1.0.6'
+    compile 'com.afollestad.material-dialogs:core:0.9.4.5'
+    compile 'com.flaviofaria:kenburnsview:1.0.5'
     testCompile 'junit:junit:4.12'
 
-    // Library to create ripple effect. work together with materialDesign library.
-    compile 'com.github.traex.rippleeffect:library:1.2.2'
-
-    // Library to create rounded, circle, and any shape image.
-    compile 'com.makeramen:roundedimageview:1.4.0'
-
-    // Library load lazy images.
-    compile 'com.squareup.picasso:picasso:2.4.0'
+    // Important library to create material design. do not remove this.
+    compile project(':materialDesign')
 }
